<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="expense"
            type="com.example.expense_tracker.model.Expense" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:contentDescription="@string/category_spinner_desc" />

            <EditText
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_remark"
                android:inputType="text"
                android:autofillHints="autofillHintName" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Add RadioButtons here -->
            </RadioGroup>

            <EditText
                android:id="@+id/amountInput"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"
                android:autofillHints="autofillHintAmount" />

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_date"
                android:inputType="date"
                android:autofillHints="autofillHintDate" />

            <Button
                android:id="@+id/btn_add_expense"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/add_expense" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>